<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textNameDummy">Dery Zhovki</string>
    <string name="location_1">Moscow, Russia \n Russia</string>
    <string name="text_content_desc">image_view</string>
    <string name="moscow_russia">Moscow, Russia</string>
    <string name="russia">Russia</string>
    <string name="jakarta_indonesia">Jakarta, Indonesia</string>
    <string name="indonesia">Indonesia</string>
    <string name="new_city">New City</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_view">image_view</string>
    <string name="mostly_sunny">Mostly Sunny</string>
</resources>