<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="20dp"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!--    1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textNameDummy"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_loc"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:listitem="@layout/item_city"/>



<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="200dp"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageButton-->
<!--            android:id="@+id/iv_moscow"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:contentDescription="@string/text_content_desc"-->
<!--            android:background="@color/white"-->
<!--            android:src="@drawable/ic_location_gray"-->
<!--            android:theme="@style/Theme.WeatherApp.New" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_moscow"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/moscow_russia"-->
<!--                android:textColor="@android:color/darker_gray"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_sub_moscow"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/russia"-->
<!--                android:textColor="@android:color/darker_gray"-->
<!--                android:textSize="16sp"/>-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->


<!--    &lt;!&ndash;    2&ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageButton-->
<!--            android:id="@+id/iv_indo"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:contentDescription="@string/text_content_desc"-->
<!--            android:background="@color/white"-->
<!--            android:src="@drawable/ic_location_gray"-->
<!--            android:theme="@style/Theme.WeatherApp.New" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_jakarta_indo"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/jakarta_indonesia"-->
<!--                android:textColor="@android:color/darker_gray"-->
<!--                android:textSize="16sp"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_sub_indo"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/indonesia"-->
<!--                android:textColor="@android:color/darker_gray"-->
<!--                android:textSize="16sp"/>-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->


    <!--    3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/iv_add_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/text_content_desc"
            android:background="@color/white"
            android:src="@drawable/ic_outline_add_location"
            android:theme="@style/Theme.WeatherApp.New" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_new_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_city"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>

