<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/tv_recapt"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mostly_sunny"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temp_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="21"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <ImageView
        android:id="@+id/iv_celcius_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/celcius"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_main"
        app:layout_constraintTop_toTopOf="@+id/tv_temp_main" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moscow_russia"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_temp_main"
        app:layout_constraintEnd_toEndOf="@+id/tv_temp_main"
        app:layout_constraintStart_toStartOf="@+id/tv_temp_main" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Feels like 32"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_temp_main"
        app:layout_constraintStart_toStartOf="@+id/tv_temp_main"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_main" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="3dp"
        android:layout_height="4dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/tiny_celcius"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_main"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_predict_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/image_view"
        android:src="@drawable/cloud_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.691" />

    <ImageView
        android:id="@+id/iv_predict_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:src="@drawable/cloud_sun"
        android:contentDescription="@string/image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iv_predict_first"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.659" />

    <TextView
        android:id="@+id/tv_predict_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="14 . 00"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_predict_first"
        app:layout_constraintEnd_toEndOf="@+id/iv_predict_first"
        app:layout_constraintStart_toStartOf="@+id/iv_predict_first" />

    <TextView
        android:id="@+id/tv_predict_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="18.00"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_predict_second"
        app:layout_constraintEnd_toEndOf="@+id/iv_predict_second"
        app:layout_constraintStart_toStartOf="@+id/iv_predict_second" />

    <TextView
        android:id="@+id/tv_temp_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="39"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_predict_first"
        app:layout_constraintStart_toStartOf="@+id/iv_predict_first"
        app:layout_constraintTop_toBottomOf="@+id/iv_predict_first"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_celcius_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tiny_celcius"
        android:contentDescription="@string/image_view"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temp_first"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_first"
        app:layout_constraintTop_toBottomOf="@+id/iv_predict_first"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_temp_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="32"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="@+id/iv_predict_second"
        app:layout_constraintTop_toBottomOf="@+id/iv_predict_first"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_celcius_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_view"
        android:src="@drawable/tiny_celcius"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temp_second"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_second"
        app:layout_constraintTop_toTopOf="@+id/tv_temp_second"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>